tests/type/bad/function_return_type.hel
foreign io_unit: IO<()>;

f = (a: i32): i32 { 1.0 };

main = io_unit;
